@@ -38,9 +38,12 @@
 #include "detection/sfrim.h"
 
 unsigned get_parse_errors();
+unsigned get_parse_warnings();
+
 const char* get_parse_file();
 void get_parse_location(const char*& name, unsigned& line);
 void push_parse_location(const char* name, unsigned line = 1);
+
 void pop_parse_location();
 void inc_parse_position();
 
