@@ -140,7 +140,7 @@ static const Parameter s_params[] =
     { "session_timeout", Parameter::PT_INT, "1:86400", "30",
       "session tracking timeout" },
 
-    { "footprint", Parameter::PT_INT, "0:", "false",
+    { "footprint", Parameter::PT_INT, "0:", "0",
       "use zero for production, non-zero for testing at given size" },
 
     { nullptr, Parameter::PT_MAX, nullptr, nullptr, nullptr }
