@@ -15,6 +15,8 @@
 -- tweaked stats output - no section if all counts zero
 -- fixed pause/resume
 -- comment out assert that doesn't apply to alert_sf_socket
+-- split parse warning count out of error count
+-- added workaround and FIXIT-T for nhttp test
 
 122
 -- pulled thread pinning from Josh
